; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_inc_long.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_inc_long.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@F_ZF = common dso_local global i32 0, align 4
@F_SF = common dso_local global i32 0, align 4
@F_PF = common dso_local global i32 0, align 4
@F_OF = common dso_local global i32 0, align 4
@F_AF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86emu*, i32)* @inc_long to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inc_long(%struct.x86emu* %0, i32 %1) #0 {
  %3 = alloca %struct.x86emu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = load i32, i32* @F_ZF, align 4
  %13 = call i32 @CONDITIONAL_SET_FLAG(i32 %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, -2147483648
  %16 = load i32, i32* @F_SF, align 4
  %17 = call i32 @CONDITIONAL_SET_FLAG(i32 %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 255
  %20 = call i32 @PARITY(i32 %19)
  %21 = load i32, i32* @F_PF, align 4
  %22 = call i32 @CONDITIONAL_SET_FLAG(i32 %20, i32 %21)
  %23 = load i32, i32* %4, align 4
  %24 = and i32 1, %23
  %25 = load i32, i32* %5, align 4
  %26 = xor i32 %25, -1
  %27 = load i32, i32* %4, align 4
  %28 = or i32 1, %27
  %29 = and i32 %26, %28
  %30 = or i32 %24, %29
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %6, align 4
  %32 = ashr i32 %31, 30
  %33 = call i32 @XOR2(i32 %32)
  %34 = load i32, i32* @F_OF, align 4
  %35 = call i32 @CONDITIONAL_SET_FLAG(i32 %33, i32 %34)
  %36 = load i32, i32* %6, align 4
  %37 = and i32 %36, 8
  %38 = load i32, i32* @F_AF, align 4
  %39 = call i32 @CONDITIONAL_SET_FLAG(i32 %37, i32 %38)
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @CONDITIONAL_SET_FLAG(i32, i32) #1

declare dso_local i32 @PARITY(i32) #1

declare dso_local i32 @XOR2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
